# mcp-chess-2

./: .gitignore  data.json  pyproject.toml  server.py
src/: server.py
